--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "bootstrap-select-dropdown": "^0.14.6",
     "boxicons": "^2.1.2",
     "cdbreact": "^1.5.3",
+    "chart.js": "^4.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-floating-label": "^1.6.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
