--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "boxicons": "^2.1.2",
     "cdbreact": "^1.5.3",
     "chart.js": "^4.2.1",
+    "google-map-react": "^2.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-floating-label": "^1.6.0",
